# tuttifrutti

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml
OptionalChain/: index.html
Result/: index.html
docs/: OptionalChain.ipynb  Result.ipynb  index.md
search/: search_index.json
src/tuttifrutti/: __init__.py  optional_chain.py
tests/: test_optional_chain.py
