[project]
name = "tuttifrutti"
version = "0.1.3"
description = "A collection of tiny, reusable Python utilities."
readme = "README.md"
authors = [
    { name = "Kunal Goel", email = "hexcodex101@gmail.com" }
]
maintainers = [
    { name = "Kunal Goel", email = "hexcodex101@gmail.com" }
]
requires-python = ">=3.12"
license = "MIT"
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/kgcodex/tuttifrutti"
Documentation = "https://github.com/kgcodex/tuttifrutti#readme"
Repository = "https://github.com/kgcodex/tuttifrutti"
Issues = "https://github.com/kgcodex/tuttifrutti/issues"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-jupyter>=0.26.3",
    "mkdocs-material>=9.7.6",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]


[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true

mypy_path = "src"
explicit_package_bases = true


[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true


[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "N",
    "ASYNC",
    "PTH",
]
# ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
